<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-jetty</name>
  <version>1.0.0</version>
  <description>Gazebo Jetty Metapackage</description>
  <maintainer email="addisu@openrobotics.org">Addisu Z. Taddese</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-jetty</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>gz-cmake4</depend>
  <depend>gz-common6</depend>
  <depend>gz-fuel_tools10</depend>
  <depend>gz-gui10</depend>
  <depend>gz-launch9</depend>
  <depend>gz-math8</depend>
  <depend>gz-msgs11</depend>
  <depend>gz-physics8</depend>
  <depend>gz-plugin3</depend>
  <depend>gz-rendering9</depend>
  <depend>gz-sensors9</depend>
  <depend>gz-sim10</depend>
  <depend>gz-transport14</depend>
  <depend>gz-utils3</depend>
  <depend>sdformat15</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

